refactor: remove Vite, switch to tsc-only ESM build

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -21,7 +21,8 @@
 
 
     <script type="module">
-        import HtmlDiff from '../lib/Diff.ts'
+        import HtmlDiff from '../../dist/Diff.js'
+
         let oldHtml = document.getElementById('oldHtml');
         let newHtml = document.getElementById('newHtml');
         let diffHtml = document.getElementById('diffHtml');
